--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -4,6 +4,16 @@
 
 $padding: 10vw;
 
+html {
+    scroll-behavior: smooth;
+
+    @media (prefers-reduced-motion: reduce) {
+        html {
+            scroll-behavior: auto;
+        }
+    }
+}
+
 h1,
 h2,
 h3 {
