--- a/src/pages/[...blog].astro
+++ b/src/pages/[...blog].astro
@@ -3,6 +3,7 @@ import { getCollection } from 'astro:content';
 import Layout from '../components/layout.tsx';
 import Seo from '../components/seo.astro';
 import '../sass/blog.scss';
+import '../sass/links.scss';
 import { MDLink } from '../components/links.tsx';
 import { ToDateString } from '../components/factories';
 
