--- a/src/pages/[...recipe].astro
+++ b/src/pages/[...recipe].astro
@@ -3,8 +3,9 @@ import { getCollection } from 'astro:content';
 import Layout from '../components/layout.jsx';
 import Seo from '../components/seo.astro';
 import '../sass/recipe.scss';
-import { MDLink } from '../components/links.jsx';
-import { ToDateString } from '../components/factories.jsx';
+import { MDLink } from '../components/links.tsx';
+import { Footnote } from '../components/blog';
+import { components } from '../components/blog';
 
 export const prerender = true;
 export async function getStaticPaths() {
@@ -23,5 +24,5 @@ const { Content } = await entry.render();
 </head>
 <Layout currPage={'recipes'} customPages={[{ name: 'recipes', url: '/recipes' }]} client:idle>
   <h1 class="recipe-title">{entry.data.title}</h1>
-  <Content components={{ a: MDLink }} />
+  <Content components={components} />
 </Layout>
