--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,10 +1,6 @@
 ---
 import Layout from '../components/layout';
 import Seo from '../components/seo.astro';
-import { faEnvelope } from '@fortawesome/free-solid-svg-icons';
-import { FontAwesomeIcon } from '@fortawesome/react-fontawesome';
-import { faLinkedin, faMastodon, faTwitter } from '@fortawesome/free-brands-svg-icons';
-import { XLink } from '../components/links.tsx';
 import ContactCard from '../components/contactCard.tsx';
 import '../sass/contact.scss';
 ---
@@ -12,7 +8,7 @@ import '../sass/contact.scss';
 <head>
   <Seo title="contact | bencuan" description="contact me" />
 </head>
-<Layout currPage="contact">
+<Layout currPage="contact" customPages={[{ name: 'contact', url: '/contact' }]}>
   <div class="container ui-text">
     <h1 class="title">contact</h1>
     <p class="splash">let's be friends!</p>
