--- a/src/sass/blog.scss
+++ b/src/sass/blog.scss
@@ -20,7 +20,6 @@ blockquote {
 
 
     p {
-        font-size: fonts.$s-1;
         margin: 0;
     }
 
@@ -39,4 +38,59 @@ blockquote {
     padding: 1rem;
     border-radius: 5px;
     box-shadow: 0px 4px 15px -6px rgba(0, 0, 0, 0.75);
+}
+
+
+.footnote-icon,
+.footnote {
+    color: colors.$purple;
+    text-decoration: none !important;
+    transition: all 0.2s;
+
+    &:hover {
+        color: colors.$lavender;
+        transform: scale(1.1);
+        font-weight: bold;
+    }
+}
+
+.footnote {
+    font-size: fonts.$s0;
+    vertical-align: super;
+    font-family: fonts.$ui;
+}
+
+.footnote-icon {
+    font-size: fonts.$s-1;
+    margin-left: 8px;
+}
+
+.highlight-ref-selected {
+    display: relative;
+    animation: highlight-ref 1.5s ease-in-out 0.15s;
+    transition: all 0.5s;
+}
+
+
+@keyframes highlight-ref {
+
+    0% {
+        background-color: transparent;
+        font-weight: normal;
+    }
+
+    15% {
+        background-color: colors.$pink;
+        color: white;
+    }
+
+    50% {
+        background-color: colors.$pink;
+        color: white;
+    }
+
+    100% {
+        background-color: transparent;
+        font-weight: normal;
+    }
 }
