--- a/src/sass/searchSortFilter.scss
+++ b/src/sass/searchSortFilter.scss
@@ -23,3 +23,14 @@
         font-weight: bold;
     }
 }
+
+.recipe-container {
+    margin: 1rem 0;
+    font-size: fonts.$s-1;
+    font-family: fonts.$ui;
+}
+
+.ssf-recipe-description {
+    font-family: fonts.$sans;
+    font-size: fonts.$s-2;
+}
