--- a/src/sass/recipe.scss
+++ b/src/sass/recipe.scss
@@ -5,7 +5,8 @@
 .recipe-title {
     font-family: fonts.$sans;
     letter-spacing: 1px;
-    font-size: fonts.$s3;
+    font-size: fonts.$s4;
+    font-weight: 500;
 }
 
 h1,
