--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -7,7 +7,7 @@ $hamburger-layer-width : 30px;
 @import '../../node_modules/hamburgers/_sass/hamburgers/hamburgers';
 
 header {
-    font-family: fonts.$special;
+    font-family: fonts.$ui;
     font-weight: 400;
     padding: 1rem;
     height: 4rem;
