--- a/src/pages/[...recipe].astro
+++ b/src/pages/[...recipe].astro
@@ -3,11 +3,9 @@ import { getCollection } from 'astro:content';
 import Layout from '../components/layout.jsx';
 import Seo from '../components/seo.astro';
 import '../sass/recipe.scss';
-import { MDLink } from '../components/links.tsx';
-import { Footnote } from '../components/blog';
 import { components } from '../components/blog';
 import { IconList } from '../components/factories.tsx';
-import { faBowlRice, faStar } from '@fortawesome/free-solid-svg-icons';
+import { faBowlRice, faClock, faSprout, faStar } from '@fortawesome/free-solid-svg-icons';
 
 export const prerender = true;
 export async function getStaticPaths() {
@@ -24,14 +22,15 @@ const { Content } = await entry.render();
 <head>
   <Seo title={entry.data.title} description={entry.data.description} />
 </head>
-<Layout currPage={'recipes'} customPages={[{ name: 'recipes', url: '/recipes' }]} client:idle>
+<Layout currPage={''} customPages={[{ name: 'recipes', url: '/recipes' }]} client:idle>
   <h1 class="recipe-title">{entry.data.title}</h1>
   <h3 class="recipe-description">{entry.data.description}</h3>
-  <h4 class="recipe-modifiers">
+  <h5 class="recipe-modifiers">
     <IconList icon={faStar} count={entry.data.rating} className="star" />
-    <IconList icon={faBowlRice} count={entry.data.asian ? 1 : 0} className="" />
-    {entry.data.veg == 1 && <span class="veg">// vegetarian</span>}
-    {entry.data.veg == 2 && <span class="vegan">// vegan</span>}
-  </h4>
+    {entry.data.veg == 1 && <span class="veg">{entry.data.rating > 0 && '//'} <IconList icon={faSprout} count={1} className={'sprout'} /> vegetarian</span>}
+    {entry.data.veg == 2 && <span class="vegan">{entry.data.rating > 0 && '//'} <IconList icon={faSprout} count={1} className={'sprout'} /> vegan</span>}
+    <span>// {<IconList icon={faClock} count={1} className={entry.data.time <= 15 ? 'clock' : ''} />} {entry.data.time}min</span>
+    {entry.data.asian && <span> // <IconList icon={faBowlRice} count={entry.data.asian ? 1 : 0} className="" /> needs asian ingredients</span>}
+  </h5>
   <Content components={components} />
 </Layout>
