--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,6 +3,7 @@ import Layout from '../components/layout';
 import Seo from '../components/seo.astro';
 import SearchSortFilter from '../components/searchSortFilter.tsx';
 import '../sass/home.scss';
+import '../sass/blog.scss';
 import { getCollection } from 'astro:content';
 
 const collection = await getCollection('blog');
@@ -13,8 +14,8 @@ const items = collection.map(item => ({ ...item.data, slug: item.slug }));
   <Seo title="bencuan's website" description="builder" />
 </head>
 <Layout currPage="blog" client:idle>
-  <h1>blog</h1>
-  <p class="splash">I build things and write about them sometimes.</p>
+  <h1 class="blog-title">blog</h1>
+  <p class="splash"></p>
 
   <SearchSortFilter sortCategories={['title', 'date']} items={items} type="blog" client:load />
 </Layout>
