--- a/src/sass/blog.scss
+++ b/src/sass/blog.scss
@@ -3,102 +3,99 @@
 @use 'mixins';
 
 .blog-title {
-    font-family: fonts.$header;
-    font-weight: 500;
-    font-size: fonts.$s4;
+  font-family: fonts.$header;
+  font-weight: 500;
+  font-size: fonts.$s4;
+  margin-top: 2rem;
 }
 
 h2 {
-    padding-top: 2rem;
+  padding-top: 2rem;
 }
 
 p,
 ul,
 ol {
-    font-family: fonts.$body;
-    color: colors.$text;
-    font-size: fonts.$s0;
+  font-family: fonts.$body;
+  color: colors.$text;
+  font-size: fonts.$s0;
 }
 
 blockquote {
-    position: relative;
-    margin: 0 0 1.5rem 0;
-    padding: 1rem;
-    background-color: colors.$background-alt;
+  position: relative;
+  margin: 0 0 1.5rem 0;
+  padding: 1rem;
+  background-color: colors.$background-alt;
 
+  p {
+    margin: 0;
+  }
 
-    p {
-        margin: 0;
-    }
-
-    &::before {
-        content: "";
-        background-color: colors.$pink;
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 3px;
-    }
+  &::before {
+    content: '';
+    background-color: colors.$pink;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 3px;
+  }
 }
 
 .astro-code {
-    padding: 1rem;
-    border-radius: 5px;
-    box-shadow: 0px 4px 15px -6px rgba(0, 0, 0, 0.75);
+  padding: 1rem;
+  border-radius: 5px;
+  box-shadow: 0px 4px 15px -6px rgba(0, 0, 0, 0.75);
 }
-
 
 .footnote-icon,
 .footnote {
-    color: colors.$lavender;
-    text-decoration: none !important;
-    transition: all 0.2s;
+  color: colors.$lavender;
+  text-decoration: none !important;
+  transition: all 0.2s;
 
-    &:hover {
-        color: black;
-        transform: scale(1.1);
-        font-weight: bold;
-    }
+  &:hover {
+    color: black;
+    transform: scale(1.1);
+    font-weight: bold;
+  }
 }
 
 .footnote {
-    font-size: fonts.$s-1;
-    vertical-align: super;
-    font-family: fonts.$ui;
+  font-size: fonts.$s-1;
+  vertical-align: super;
+  font-family: fonts.$ui;
 }
 
 .footnote-icon {
-    font-size: fonts.$s-1;
-    margin-left: 8px;
+  font-size: fonts.$s-1;
+  margin-left: 8px;
 }
 
 .highlight-ref-selected {
-    display: relative;
-    animation: highlight-ref 1.5s ease-in-out 0.15s;
-    transition: all 0.5s;
+  display: relative;
+  animation: highlight-ref 1.5s ease-in-out 0.15s;
+  transition: all 0.5s;
 }
 
-
 @keyframes highlight-ref {
+  0% {
+    background-color: transparent;
+    font-weight: normal;
+  }
 
-    0% {
-        background-color: transparent;
-        font-weight: normal;
-    }
+  15% {
+    background-color: colors.$pink;
+    color: white;
+  }
 
-    15% {
-        background-color: colors.$pink;
-        color: white;
-    }
+  50% {
+    background-color: colors.$pink;
+    color: white;
+  }
 
-    50% {
-        background-color: colors.$pink;
-        color: white;
-    }
-
-    100% {
-        background-color: transparent;
-        font-weight: normal;
-    }
+  100% {
+    background-color: transparent;
+    font-weight: normal;
+  }
 }
