--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -81,12 +81,13 @@ footer {
 
 .container {
   padding: 0 $padding;
-  max-width: 1366px;
-  min-width: min(80vw, 1366px);
+  width: min(80vw, 1366px);
   margin: auto;
 
   @include mixins.screen('mobile') {
-    padding-top: 100px;
+    width: min(90vw, 1366px);
+    padding: 0 calc($padding / 2);
+    padding-top: 6rem;
   }
 }
 
