--- a/src/pages/library.astro
+++ b/src/pages/library.astro
@@ -43,8 +43,9 @@ const items = collection.map(item => ({ ...item.data, slug: item.slug, descripti
   <h2>ratings</h2>
 
   <p>
-    ∅ no stars: I enjoyed every book on this list, so having no stars doesn’t mean it was bad! But YMMV on these: they
-    range anywhere from ‘just above average’ to ‘absolutely incredible but not for a general audience’.
+    ∅ no stars: If I didn't think a book was worth recommending, it won't be on this list- so having no stars isn't a
+    bad thing! But YMMV on these: they range anywhere from ‘just above average’ to ‘absolutely incredible but not for a
+    general audience’.
   </p>
   <p>
     <IconList icon={faStar} count={1} className="intro-star" /> one star: great read! I had a fun time and learned something
