--- a/src/pages/recipes.astro
+++ b/src/pages/recipes.astro
@@ -16,7 +16,7 @@ const items = collection.map(item => ({ ...item.data, slug: item.slug }));
 </head>
 <Layout currPage="recipes" customPages={[{ name: 'recipes', url: '/recipes' }]} client:load>
   <h1 class="recipe-title">recipes</h1>
-  <p class="splash">Simple, opinionated, battle-tested recipes: no life story, slideshows, or annoying popups.</p>
+  <p class="splash">Simple work-in-progress recipes.</p>
   <p></p>
   <span class="small-text ui-text">
     <div><IconList icon={faStar} count={1} className={'star'} /> rare</div>
